Home Page Tasarımı Yapıldı

--- a/src/Components/style/css/navbar.css
+++ b/src/Components/style/css/navbar.css
@@ -108,7 +108,7 @@
   }
   .click {
     display: block !important;
-    position: absolute;
+    position: fixed;
     top: 30px;
     background-color: rgb(255, 255, 255);
     right: 20px;
@@ -122,7 +122,7 @@
   }
   .clicked {
     display: block !important;
-    position: absolute;
+    position: fixed;
     border: none;
     top: 32px;
     background-color: rgb(135, 7, 240);
