--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,8 @@ body {
     overflow-y: scroll;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+.index-content {
+    display: flex;
+    flex-direction: column;
+}
