--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -18,6 +18,7 @@
 }
 
 .heading-primary {
+  font-size: 6rem;
   font-size: 3rem;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -34,6 +35,7 @@
 
 .text-primary {
   color: #333;
+  font-size: 2.2rem;
   font-size: 1.2rem;
   text-align: center;
   width: 100%;
@@ -46,6 +48,8 @@
 }
 
 .btn--bg {
+  padding: 1.5rem 8rem;
+  font-size: 2rem;
   padding: 1.2rem 7rem;
   font-size: 1.5rem;
 }
