--- a/src/Components/style/about.scss
+++ b/src/Components/style/about.scss
@@ -1,6 +1,70 @@
-.about{
-     //Baslik Ana Div
+$primaryColor:#00c0f0;
+
+
+.about{//ABOUT PAGE
     width: 100%;
-    height: 100vh;
+    height:auto;
     background-color: #fafafa;
-}
+ // -------------------------- -----------------------------------------------------------------------------
+    .about-content {
+       margin-bottom: 100px;        
+     }//about__content
+     .heading-sec-sub {
+        display: block;
+        text-align: center;
+        color: #555;
+        font-size: 1.1rem;
+        font-weight: 500;
+        max-width: 40rem;
+        margin: auto;
+        line-height: 1.6;
+    }
+
+     //  -----------------------------------------------------------------------------
+     .about-content-title{
+        font-weight: 700;
+        font-size: 1.6rem;
+         margin-bottom: 3rem;
+
+     }//Hakkımda Başlık
+     .paragraf{
+        font-size: 1.1rem;
+        color: #666;
+        max-width: 60rem;
+        line-height: 1.7;
+        margin-bottom: 1rem;
+    }
+    .skils-title{
+    
+        font-weight: 700;
+    }
+    .v-title{
+        font-weight: 700;
+        color: $primaryColor;
+    }
+
+    .skils{
+        display: flex;
+    flex-wrap: wrap;
+    .skills__skill {
+        padding: 0.5rem 1rem;
+        margin-bottom: 1.5rem;
+        margin-right: 1.5rem;
+        font-size: 1.1rem;
+        background: $primaryColor;
+        color: white;
+        border-radius: 5px;
+        font-weight: 600;
+      
+        cursor: pointer;
+    }
+
+    }
+      .highlight{
+        transition: all 1.3s;
+        color: $primaryColor;
+        font-size: 1.4rem;
+      }
+
+
+} //ABOUT PAGE
