mouse görünümü eklendi

--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -3,8 +3,6 @@
   background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url(../../../images/background.jpg);
   background-position: center;
   height: 100vh;
-
-
   position: relative;
 
 }
@@ -14,7 +12,49 @@
   bottom: 3%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: red;
+
+}
+
+@keyframes wheel {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(7px);
+    /* Yukarı hareket */
+  }
+
+  100% {
+    transform: translateY(0);
+    /* Başlangıç pozisyonuna geri dön */
+  }
+}
+
+.mouse {
+  width: 27px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 60px;
+  position: relative;
+  overflow: hidden;
+}
+
+
+
+.mouse::before {
+  content: '';
+  width: 5px;
+  height: 5px;
+  position: absolute;
+  top: 7px;
+  left: 40%;
+  transform: translateX(-50%);
+  background-color: gray;
+  border-radius: 50%;
+  opacity: 1;
+  animation: wheel 2.3s infinite;
+
 }
 
 .heading-primary {
