--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -2,7 +2,8 @@
   color: #fff;
   background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url(../../../images/background.jpg);
   background-position: center;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   position: relative;
 
 }
