--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -8,6 +8,40 @@
 
 }
 
+@keyframes barChange {
+  0% {
+    padding: 100% 20px;
+    /* Başlangıç rengi */
+  }
+
+  50% {
+    padding: 50% 20px;
+    /* Orta renk */
+  }
+
+  100% {
+    padding: 0.2rem;
+
+    /* Son renk */
+  }
+}
+
+.home-hero__socials {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #cecece1e;
+
+  padding: 0.2rem;
+  box-shadow: 20px 20px 2px 0px rgb(255, 209, 2);
+  z-index: 2;
+  animation: barChange 3.2s;
+}
+
+.home-hero__social-icon-link:hover {
+  background: rgba(120, 67, 233, 0.2);
+}
+
 .home-hero__mouse-scroll-cont {
   position: absolute;
   bottom: 3%;
@@ -55,7 +89,6 @@
   border-radius: 50%;
   opacity: 1;
   animation: wheel 2.3s infinite;
-
 }
 
 .heading-primary {
@@ -76,11 +109,25 @@
 
 .texting-primary {
   color: #333;
-  font-size: 2.2rem;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   text-align: center;
   width: 100%;
   line-height: 1.6;
+}
+
+.text-bar {
+  color: #333;
+  font-size: 0.8rem;
+  text-align: center;
+  width: 100%;
+  line-height: 1.6;
+}
+
+.bar-icon {
+  z-index: 5;
+  font-size: 40px;
+  color: rgba(140, 206, 200, 0.377);
+  margin: 25%;
 }
 
 .home-hero__cta {
@@ -105,6 +152,7 @@
   border-radius: 5px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
   transition: transform .3s;
+  margin-bottom: 200px;
 }
 
 .home-hero__social {
@@ -120,5 +168,26 @@
 }
 
 .home-hero__social-icon {
-  width: 100%;
+  width: 90%;
+}
+
+@media screen and (max-width: 992px) {
+  .home-hero__socials {
+    position: fixed;
+    top: 90%;
+    transform: translateY(-50%);
+    background: #cecece1e;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    padding: 0rem 8rem;
+    box-shadow: 20px 20px 2px 0px rgba(40, 153, 228, 0.034);
+    z-index: 2;
+    width: 100%;
+    height: 70px;
+    display: flex;
+  }
+
+  .last-info {
+    display: none;
+  }
+
 }
