responsive tasarımlar yapıldı

--- a/src/Components/style/about.scss
+++ b/src/Components/style/about.scss
@@ -5,6 +5,7 @@ $primaryColor:#00c0f0;
     width: 100%;
     height:auto;
     background-color: #fafafa;
+    z-index: 3;
  // -------------------------- -----------------------------------------------------------------------------
     .about-content {
        margin-bottom: 100px;        
