--- a/src/Components/style/navbar.scss
+++ b/src/Components/style/navbar.scss
@@ -106,13 +106,16 @@
         font-weight: 800;
         letter-spacing: 1px;
     }
+    .header__sm-menu-link {
+        list-style: none;
+      }
     .header__sm-menu-link a {
         display: block;
         text-decoration: none;
         padding: 2.5rem 3rem;
         font-size: 1rem;
         color: #333;
-        text-align: right;
+        text-align:center;
         border-bottom: 1px solid #eee;
         font-weight: 700;
         text-transform: uppercase;
