--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -173,21 +173,39 @@
 
 @media screen and (max-width: 992px) {
   .home-hero__socials {
-    position: fixed;
+    position: absolute;
     top: 90%;
     transform: translateY(-50%);
     background: #cecece1e;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 0rem 8rem;
+    padding: 0rem 6rem;
     box-shadow: 20px 20px 2px 0px rgba(40, 153, 228, 0.034);
     z-index: 2;
     width: 100%;
     height: 70px;
     display: flex;
+    animation: none;
   }
+
 
   .last-info {
     display: none;
   }
 
+
+
+}
+
+@media screen and (max-width: 1280px) {
+  .home-hero__socials {
+    position: fixed;
+    top: 70%;
+    transform: translateY(-50%);
+    background: #cecece1e;
+
+    padding: 0.2rem;
+    box-shadow: 0px 0px 0px 0px rgb(255, 209, 2);
+    z-index: 2;
+    animation: barChange 3.2s;
+  }
 }
