--- a/src/Components/style/navbar.scss
+++ b/src/Components/style/navbar.scss
@@ -6,11 +6,10 @@
     background: #fff;
     box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1);
     .header-content {
-        
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 1rem 5rem;
+        padding: 0rem 5rem;
         .header-logo-container {
             display: flex;
             align-items: center;
@@ -161,6 +160,9 @@
     border-radius:5px ;
     transition: all 0.3s;
 
+}
+.header-content {
+    padding: 1rem 5rem !important;
 }
 
 }
