--- a/src/Components/style/about.scss
+++ b/src/Components/style/about.scss
@@ -1,4 +1,4 @@
-$primaryColor:#00c0f0;
+
 
 
 .about{//ABOUT PAGE
@@ -31,7 +31,7 @@ $primaryColor:#00c0f0;
     }
     .v-title{
         font-weight: 700;
-        color: $primaryColor;
+        color: var(--primaryColor);
     }
 
     .skils{
@@ -42,18 +42,18 @@ $primaryColor:#00c0f0;
         margin-bottom: 1.5rem;
         margin-right: 1.5rem;
         font-size: 1.1rem;
-        background: $primaryColor;
+        background: var(--primaryColor);
         color: white;
         border-radius: 5px;
         font-weight: 600;
-      
+         opacity: 0.7;
         cursor: pointer;
     }
 
     }
       .highlight{
         transition: all 1.3s;
-        color: $primaryColor;
+        color:var(--primaryColor);
         font-size: 1.4rem;  
       }
 
