--- a/src/Components/style/css/contact.css
+++ b/src/Components/style/css/contact.css
@@ -57,12 +57,12 @@
 }
 
 .btn--theme {
-  background: #7843E9;
+  background: var(--primaryColor);
   color: hsl(0, 0%, 100%);
 }
 
 .btn:hover {
-  background-color: #7843E9 !important;
+  background-color: var(--primaryColor) !important;
   transform: translateY(-3px);
 }
 
