--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .home-hero {
   color: #fff;
   background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url(../../../images/background.jpg);
@@ -5,7 +6,7 @@
   height: auto;
   min-height: 100vh;
   position: relative;
-
+  color: 243;
 }
 
 @keyframes barChange {
@@ -13,29 +14,45 @@
     padding: 100% 20px;
     /* Başlangıç rengi */
   }
-
   50% {
     padding: 50% 20px;
     /* Orta renk */
   }
-
   100% {
     padding: 0.2rem;
-
     /* Son renk */
   }
 }
-
+@keyframes Text {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-3px);
+  }
+  50% {
+    transform: translateY(6px);
+  }
+  75% {
+    transform: translateY(-3px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 .home-hero__socials {
   position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   top: 50%;
   transform: translateY(-50%);
-  background: #cecece1e;
-
+  background: rgba(206, 206, 206, 0.1176470588);
   padding: 0.2rem;
-  box-shadow: 20px 20px 2px 0px rgb(255, 209, 2);
   z-index: 2;
   animation: barChange 3.2s;
+  margin: 0 auto;
 }
 
 .home-hero__social-icon-link:hover {
@@ -47,25 +64,69 @@
   bottom: 3%;
   left: 50%;
   transform: translateX(-50%);
+}
 
+.tema-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tema-title {
+  color: black;
+  font-size: 12px;
+  padding: 0px 5px;
+  margin-top: 50px;
+  font-weight: 900;
+  animation: Text 10.5s infinite;
+}
+
+.button-theme-red {
+  display: flex;
+  background-color: red;
+  width: 30px;
+  height: 30px;
+  border: solid 3px white;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-left: 5px;
+}
+
+.button-theme-blue {
+  display: flex;
+  background-color: #0071f3;
+  width: 30px;
+  height: 30px;
+  border: solid 3px white;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-left: 5px;
+}
+
+.button-theme-orange {
+  display: flex;
+  background-color: orange;
+  width: 30px;
+  height: 30px;
+  border: solid 3px white;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-left: 5px;
 }
 
 @keyframes wheel {
   0% {
     transform: translateY(0);
   }
-
   50% {
     transform: translateY(7px);
     /* Yukarı hareket */
   }
-
   100% {
     transform: translateY(0);
     /* Başlangıç pozisyonuna geri dön */
   }
 }
-
 .mouse {
   width: 27px;
   height: 42px;
@@ -75,10 +136,8 @@
   overflow: hidden;
 }
 
-
-
 .mouse::before {
-  content: '';
+  content: "";
   width: 5px;
   height: 5px;
   position: absolute;
@@ -135,8 +194,6 @@
   text-align: center;
 }
 
-
-
 .home-hero__social {
   width: 5rem;
 }
@@ -145,7 +202,7 @@
   width: 100%;
   display: block;
   padding: 1rem;
-  transition: background .3s;
+  transition: background 0.3s;
   border-radius: 5px;
 }
 
@@ -158,7 +215,7 @@
     position: absolute;
     top: 100%;
     transform: translateY(-50%);
-    background: #cecece1e;
+    background: rgba(206, 206, 206, 0.1176470588);
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 0rem 6rem;
     box-shadow: 20px 20px 2px 0px rgba(40, 153, 228, 0.034);
@@ -168,23 +225,16 @@
     display: flex;
     animation: none;
   }
-
-
   .last-info {
     display: none;
   }
-
-
-
 }
-
 @media screen and (max-width: 1280px) {
   .home-hero__socials {
     position: fixed;
     top: 70%;
     transform: translateY(-50%);
-    background: #cecece1e;
-
+    background: rgba(206, 206, 206, 0.1176470588);
     padding: 0.2rem;
     box-shadow: 0px 0px 0px 0px rgb(255, 209, 2);
     z-index: 2;
