--- a/src/Components/style/css/navbar.css
+++ b/src/Components/style/css/navbar.css
@@ -25,7 +25,7 @@
   border-radius: 50px;
   overflow: hidden;
   margin-right: 1.5rem;
-  background: #7843E9;
+  background: var(--primaryColor);
 }
 .header .header-content .header-logo-img-cont .header-logo-img {
   width: 100%;
@@ -60,7 +60,7 @@
   text-decoration: none;
 }
 .header .header-content .header-main .header__link:hover {
-  color: #7843E9;
+  color: var(--primaryColor);
 }
 .header .header-sm-menu {
   background: #fff;
@@ -118,17 +118,17 @@
     z-index: 9999999;
     padding: 5px 15px;
     font-size: 24px;
-    color: rgb(135, 7, 240);
+    color: var(--primaryColor);
     border-radius: 5px;
     transition: all 0.3s;
-    border: solid 1px rgb(135, 7, 240);
+    border: var(--primaryColor);
   }
   .clicked {
     display: block !important;
     position: fixed;
     border: none;
     top: 32px;
-    background-color: rgb(135, 7, 240);
+    background-color: var(--primaryColor);
     right: 20px;
     z-index: 9999999;
     padding: 5px 15px;
