--- a/src/Components/style/css/project.css
+++ b/src/Components/style/css/project.css
@@ -1,52 +1,3 @@
-.about {
-  width: 100%;
-  height: auto;
-  background-color: #fafafa;
-  z-index: 3;
-}
-.about .about-content {
-  margin-bottom: 100px;
-}
-.about .about-content-title {
-  font-weight: 700;
-  font-size: 1.6rem;
-  margin-bottom: 3rem;
-}
-.about .paragraf {
-  font-size: 1.1rem;
-  color: #666;
-  max-width: 60rem;
-  line-height: 1.7;
-  margin-bottom: 1rem;
-}
-.about .skils-title {
-  font-weight: 700;
-}
-.about .v-title {
-  font-weight: 700;
-  color: #00c0f0;
-}
-.about .skils {
-  display: flex;
-  flex-wrap: wrap;
-}
-.about .skils .skills__skill {
-  padding: 0.5rem 1rem;
-  margin-bottom: 1.5rem;
-  margin-right: 1.5rem;
-  font-size: 1.1rem;
-  background: #00c0f0;
-  color: white;
-  border-radius: 5px;
-  font-weight: 600;
-  cursor: pointer;
-}
-.about .highlight {
-  transition: all 1.3s;
-  color: #00c0f0;
-  font-size: 1.4rem;
-}
-
 .project {
   width: 100%;
   height: auto;
@@ -81,7 +32,7 @@
 }
 
 .vurgu {
-  color: #00c0f0;
+  color: var(--secondaryColor);
   font-weight: 900;
 }
 
