--- a/src/Components/style/navbar.scss
+++ b/src/Components/style/navbar.scss
@@ -24,7 +24,7 @@
             border-radius: 50px;
             overflow: hidden;
             margin-right: 1.5rem;
-            background: #7843E9;
+            background: var(--primaryColor);
 
             .header-logo-img {
                 width: 100%;
@@ -69,7 +69,7 @@
             }
         }
         .header__link:hover {
-            color: #7843E9;
+            color: var(--primaryColor);
         }
     } //linklerin style kodları bitiş
          
@@ -140,10 +140,10 @@
     z-index: 9999999;
     padding: 5px 15px;
     font-size: 24px;
-    color: rgb(135, 7, 240);
+    color: var(--primaryColor);
     border-radius:5px ;
     transition: all 0.3s;
-    border:  solid 1px rgb(135, 7, 240);
+    border:  var(--primaryColor);
 
 }
 .clicked{
@@ -151,7 +151,7 @@
     position: fixed;
     border: none;
     top: 32px;
-    background-color: rgb(135, 7, 240);
+    background-color: var(--primaryColor);
     right: 20px;
     z-index: 9999999;
     padding: 5px 15px;
