tema değiştirme bloğu responsive şekilde ayarlandı

--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -213,7 +213,9 @@
 @media screen and (max-width: 992px) {
   .home-hero__socials {
     position: absolute;
-    top: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 30%;
     transform: translateY(-50%);
     background: rgba(206, 206, 206, 0.1176470588);
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
