--- a/src/Components/style/homeHero.scss
+++ b/src/Components/style/homeHero.scss
@@ -215,7 +215,9 @@
   @media screen and (max-width: 992px) {
     .home-hero__socials {
       position: absolute;
-      top: 100%;
+      display: flex;
+      flex-direction: row;
+       margin-top: 30%;
       transform: translateY(-50%);
       background: #cecece1e;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
