--- a/src/Components/style/contact.scss
+++ b/src/Components/style/contact.scss
@@ -8,6 +8,7 @@
   padding-bottom:5rem;
   z-index: 3;
 }
+
 .contact-form-container{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     background: white;
@@ -15,7 +16,7 @@
     margin-top: 6rem;
     max-width: 50rem;
     text-align: right;
-    width: 95%;
+    width: 50%;
     border-radius: 5px;
     margin: 5rem auto 0 auto;
 }
@@ -60,6 +61,17 @@ font-size: 16px;
     transform: translateY(-3px);
 }
 @media only screen and (max-width: 37.5em) {
+    .contact-form-container{
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        background: white;
+        padding: 4rem;
+        margin-top: 6rem;
+        max-width: 50rem;
+        text-align: right;
+        width: 100%;
+        border-radius: 5px;
+        margin: 5rem auto 0 auto;
+    }
     .contact__btn {
         width: 100%;
     }
