--- a/src/Components/style/css/homeHero.css
+++ b/src/Components/style/css/homeHero.css
@@ -77,6 +77,7 @@
   font-size: 12px;
   padding: 0px 5px;
   margin-top: 50px;
+  margin-bottom: 10px;
   font-weight: 900;
   animation: Text 10.5s infinite;
 }
@@ -212,20 +213,7 @@
 
 @media screen and (max-width: 992px) {
   .home-hero__socials {
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    margin-top: 30%;
-    transform: translateY(-50%);
-    background: rgba(206, 206, 206, 0.1176470588);
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 0rem 6rem;
-    box-shadow: 20px 20px 2px 0px rgba(40, 153, 228, 0.034);
-    z-index: 2;
-    width: 100%;
-    height: 70px;
-    display: flex;
-    animation: none;
+    visibility: hidden;
   }
   .last-info {
     display: none;
