--- a/src/Components/style/css/footer.css
+++ b/src/Components/style/css/footer.css
@@ -45,9 +45,12 @@
   height: 50px;
   padding: 10px;
   width: 20rem;
+  display: flex;
+  justify-content: space-around;
   cursor: pointer;
 }
 .footer-social-icons .footer-logo {
+  width: 50px;
   padding-right: 20px;
 }
 .footer-social-icons img {
